--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <dependencies>
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
             <version>1.11.220</version>
         </dependency>
     </dependencies>
